--- a/style/laptopscreen/o-slide.css
+++ b/style/laptopscreen/o-slide.css
@@ -6,7 +6,7 @@
         background-color : #1FB5F8;
         position: fixed;
         top: 0px;
-        z-index: 1;
+        z-index: 10;
         overflow-y: auto;
         overflow-x: hidden;
         table-layout: fixed;
